fix margin-left for the action more alignment

--- a/packages/vapor/scss/tables/table-actions.scss
+++ b/packages/vapor/scss/tables/table-actions.scss
@@ -30,7 +30,7 @@
 
         .dropdown-menu {
           margin-top: -3px;
-          margin-left: -19px;
+          margin-left: 19px;
 
           .dropdown-arrow {
             right: 5px;
